<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.habit.AddHabitFragment">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="150dp">

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/privacySwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="36dp"
                android:elevation="10dp"
                android:layout_margin="@dimen/activity_horizontal_margin"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                android:thumb="@drawable/thumb1"
                app:track="@drawable/track"
                android:scaleX="0.6"
                android:scaleY="0.6"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/habitTitleLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/privacySwitch"
                android:layout_marginLeft="36dp"
                android:layout_marginRight="36dp"
                android:layout_marginTop="16dp"
                app:counterEnabled="true"
                app:counterMaxLength="20"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/habitTitleET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:maxLength="20"
                    android:fontFamily="@font/rubik_bold"
                    android:textSize="20sp"
                    android:gravity="center"
                    android:hint="Habit Title"
                    android:inputType="textLongMessage"
                    android:background="@color/transparent"/>
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/habitReasoningLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/activity_vertical_margin"
                android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
                android:hint="Reasoning"
                app:counterEnabled="true"
                app:counterMaxLength="30"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.496"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/habitTitleLayout"
                app:layout_constraintBottom_toTopOf="@id/divider"
                app:placeholderText="Reasoning for why the habit is important">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/habitReasoningET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:maxLength="30"
                    android:gravity="start|top"
                    android:inputType="textMultiLine" />

            </com.google.android.material.textfield.TextInputLayout>

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/light_gray"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                app:layout_constraintBottom_toTopOf="@+id/datePromptMessage"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/habitReasoningLayout" />

            <TextView
                android:id="@+id/datePromptMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/activity_vertical_margin"
                android:fontFamily="@font/rubik_bold"
                android:text="DATE TO START"
                android:textColor="@color/blue"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider" />

            <TextView
                android:id="@+id/dateFormatMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/activity_vertical_margin"
                android:text="YYYY-MM-DD"
                android:textColor="@color/blue"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/datePromptMessage" />

            <Button
                android:id="@+id/chooseDateButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/activity_vertical_margin"
                android:fontFamily="@font/rubik_bold"
                android:text="Choose Date"
                app:cornerRadius="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dateFormatMessage"
                app:layout_constraintBottom_toTopOf="@id/divider2"/>

            <View
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/light_gray"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                app:layout_constraintBottom_toTopOf="@+id/pickDaysMessage"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/chooseDateButton" />

            <TextView
                android:id="@+id/pickDaysMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/activity_vertical_margin"
                android:fontFamily="@font/rubik_bold"
                android:text="CHOOSE DAYS OF WEEK\nFOR HABIT TO OCCUR"
                android:textAlignment="center"
                android:textColor="@color/blue"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider2" />

            <HorizontalScrollView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pickDaysMessage"
                app:layout_constraintVertical_bias="0.008">

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/chipGroup"
                    app:singleLine="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    >

                    <com.google.android.material.chip.Chip
                        android:id="@+id/sundayChip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="SU"
                        android:clickable="true"
                        android:focusable="true"
                        android:checkable="true"
                        style="@style/CustomChipChoice"/>

                    <com.google.android.material.chip.Chip
                        android:id="@+id/mondayChip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:focusable="true"
                        android:checkable="true"
                        style="@style/CustomChipChoice"
                        android:text="MO" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/tuesdayChip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="TU"
                        android:clickable="true"
                        android:focusable="true"
                        android:checkable="true"
                        style="@style/CustomChipChoice"/>

                    <com.google.android.material.chip.Chip
                        android:id="@+id/wednesdayChip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="WE"
                        android:clickable="true"
                        android:focusable="true"
                        android:checkable="true"
                        style="@style/CustomChipChoice"/>

                    <com.google.android.material.chip.Chip
                        android:id="@+id/thursdayChip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="TH"
                        android:clickable="true"
                        android:focusable="true"
                        android:checkable="true"
                        style="@style/CustomChipChoice"/>

                    <com.google.android.material.chip.Chip
                        android:id="@+id/fridayChip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="FR"
                        android:clickable="true"
                        android:focusable="true"
                        android:checkable="true"
                        style="@style/CustomChipChoice"/>

                    <com.google.android.material.chip.Chip
                        android:id="@+id/saturdayChip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="SA"
                        android:clickable="true"
                        android:focusable="true"
                        android:checkable="true"
                        style="@style/CustomChipChoice"/>

                </com.google.android.material.chip.ChipGroup>
            </HorizontalScrollView>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="659dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>



    <Button
        android:id="@+id/confirmAddHabitButton"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="36dp"
        android:background="@drawable/custom_rounded_square_button"
        app:elevation="10dp"
        app:icon="@drawable/ic_checkmark"
        app:iconSize="38dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>