...
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
        app:navGraph="@navigation/mobile_navigation" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/addHabitButton"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:background="@drawable/custom_rounded_square_button"
        app:icon="@drawable/ic_baseline_add_24"
        app:iconSize="38dp"
        app:layout_constraintLeft_toRightOf="@id/nav_view"
...
